--- a/package.json
+++ b/package.json
@@ -2,21 +2,14 @@
   "name": "api-desafio-3",
   "version": "1.0.0",
   "description": "API de login para desafio de teste de software.",
-  "main": "app.js",
+  "main": "rest/app.js",
   "scripts": {
-    "start": "node app.js",
-    "test": "mocha --recursive test/*.test.js --reporter mochawesome"
+    "start": "node rest/app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mochawesome": "^7.1.3",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.3"
-  },
-  "devDependencies": {
-    "chai": "^5.2.1",
-    "mocha": "^11.7.1",
-    "supertest": "^7.1.4"
+    "swagger-ui-express": "^4.6.3",
+    "swagger-jsdoc": "^6.2.8"
   }
-}
+} 
